Version 0.9.7 (2004-05-10)
==========================

* Fixed examples source code in the "Short introduction to log4cxx".
* Fixed, in the renaming algorithm of RollingFileAppender and
  DailyRollingFileAppender, a problem specific to Unicode.
* Fixed conflict with Windows macros "min" and "max", by renaming
  StrictMath::min and StrictMath::max to StrictMath::minimum and
  StrictMath::maximum.
* Port to HPUX 11.0.
* Fixed segmentation fault in PropertyConfigurator.
* Port to Solaris.
* Fixed MutexException thrown while destroying RollingFileAppender.
* Logging macros can be used without explicity declaring the use of log4cxx
  namespace.
* Fixed static library unresolved externals for msvc 6 and 7.1

Version 0.9.6 (2004-04-11)
==========================

* Timezone management has been optimized through the class TimeZone
* Inter-thread synchronization and reference counting has been optimized
* Reference counting now uses gcc atomic functions (bug 929078)
* Use of StringBuffer has been optimized.
* Support of localisation throug resourceBundles
* SyslogAppender now uses the system function 'syslog' to log on the local host.
 (only for POSIX systems)
* Added TimeZone configuration to PatternLayout (bug 912563)
* Support of the DailyRollingFileAppender (feature request 842765)

Version 0.9.5 (2004-02-04)
==========================

* Port of log4j Jnuit tests with Cppunit and Boost Regex.
* Added explicit exports for MSDEV 6 and MSDEV 7 (no further need of .def files)
* Custom levels can be configured through the DOMConfigurator and
  PropertyConfigurator classes (Level inherites from Object)
* Added a reference counter to LoggingEvent to avoid useless copies
  (LoggingEvent inherites from Object)
* The file log4j.xml as well as the file log4j.properties are now search
  for, in log4cxx initialization.
* The root logger can be assigned the "OFF" level.
* Added MSVC6 project missing files mutext.cpp & condition.cpp (bug 847397)